Added pagination support for my/org groups

--- a/app/Resources/views/groups/all_groups-groups.html.twig
+++ b/app/Resources/views/groups/all_groups-groups.html.twig
@@ -1,1 +1,1 @@
-{% include ':groups:_groups.html.twig' with {'color': 'purple', 'type': 'all-groups'} %}
+{% include ':groups:_groups.html.twig' with {'color': 'purple', 'type': 'all-groups', 'groups': allGroups} %}
