--- a/app/Resources/views/groups/_groups.html.twig
+++ b/app/Resources/views/groups/_groups.html.twig
@@ -1,10 +1,6 @@
 {% for group in groups %}
     {% set class = 'none' %}
-    {% if attribute(myGroups.other.member, group.id) is defined %}
-        {% set class = 'member' %}
-    {% elseif attribute(myGroups.other.admin, group.id) is defined %}
-        {% set class = 'member' %}
-    {% elseif group.type == 'grouphub' %}
+    {% if group.type == 'grouphub' or attribute(memberships, group.id) is defined %}
         {% set class = 'member' %}
     {% endif %}
 
@@ -23,16 +19,16 @@
             </p>
         </div>
         <div>
-            {% if attribute(myGroups.grouphub.member, group.id) is defined or attribute(myGroups.grouphub.admin, group.id) is defined %}
+            {% if group.type == 'grouphub' and attribute(memberships, group.id) is defined and attribute(memberships, group.id).role in ['member', 'admin'] %}
                 <a class="button_member {{ color }}" href="#" data-hover="{{ 'LEAVE'|trans }}"
                    data-url="{{ path('my_membership_delete', {'groupId': group.id}) }}">
                     <span>{{ 'LEAVE'|trans }}</span>
                 </a>
-            {% elseif attribute(myGroups.other.member, group.id) is defined or attribute(myGroups.other.admin, group.id) is defined %}
+            {% elseif group.type != 'grouphub' and attribute(memberships, group.id) is defined and attribute(memberships, group.id).role in ['member', 'admin'] %}
                 <a class="button_join {{ color }}" href="#">
                     <span>{{ 'MEMBER'|trans }}</span>
                 </a>
-            {% elseif attribute(myGroups.grouphub.prospect, group.id) is defined %}
+            {% elseif group.type == 'grouphub' and attribute(memberships, group.id) is defined and attribute(memberships, group.id).role == 'prospect' %}
                 <a class="button_join {{ color }}" href="#">
                     <span>{{ 'PROSPECT'|trans }}</span>
                 </a>
