--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,7 +17,7 @@
 
 <header class="header">
     <ul>
-        <li><a href="{{ path('home') }}">{{ 'GroupHUB'|trans }}</a></li>
+        <li><a href="{{ path('home') }}"><img src="{{ asset('img/logo.png') }}" height="35" width="102"></a></li>
         <li><a href="{{ path('home') }}">{{ application_title }}</a></li>
     </ul>
 
