--- a/web/css/grouphub.css
+++ b/web/css/grouphub.css
@@ -1449,3 +1449,9 @@ li.spinner a {
     float: right;
     width: 55%;
 }
+
+.header ul:first-child a {
+    height: 35px;
+    line-height: 35px;
+    float: left;
+}
