--- a/web/css/grouphub.css
+++ b/web/css/grouphub.css
@@ -859,7 +859,11 @@ li.group_section div:nth-child(2) p:first-child {
 /* line 44, _group_section.scss */
 li.group_section div:nth-child(2) p:nth-child(2) {
     color: #8a8a8a;
-    font-size: 13px; }
+    font-size: 13px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
 /* line 49, _group_section.scss */
 li.group_section div:nth-child(2) p:last-child {
     color: #52b2cd;
