--- a/app/Resources/views/groups/_groups.html.twig
+++ b/app/Resources/views/groups/_groups.html.twig
@@ -1,14 +1,11 @@
 {% for group in groups %}
-    {% set class = 'none' %}
-    {% if group.type == 'grouphub' or attribute(memberships, group.id) is defined %}
-        {% set class = 'member' %}
-    {% endif %}
-
-    <li class="group_section edit {{ class }} group-{{ group.id }}" data-url="{{ path('group_details', {'id': group.id}) }}">
+    <li class="group_section edit {% if group.type == 'grouphub' %}member{% else %}none{% endif %} group-{{ group.id }}"
+        data-url="{{ path('group_details', {'id': group.id}) }}">
         <div>
-            <i class="fa fa-user {{ color }}"></i>
+            <i class="fa {% if group.type == 'grouphub' %}fa-user{% else %}fa-lock{% endif %} {{ color }}"></i>
             <span class="count">{{ group.userCount }}</span>
         </div>
+
         <div>
             <p class="name">{{ group.name }}</p>
             <p class="description">{{ group.description }}&nbsp;</p>
@@ -18,15 +15,12 @@
                 {% endif %}
             </p>
         </div>
+
         <div>
             {% if group.type == 'grouphub' and attribute(memberships, group.id) is defined and attribute(memberships, group.id).role in ['member', 'admin'] %}
                 <a class="button_member {{ color }}" href="#" data-hover="{{ 'LEAVE'|trans }}"
                    data-url="{{ path('my_membership_delete', {'groupId': group.id}) }}">
                     <span>{{ 'LEAVE'|trans }}</span>
-                </a>
-            {% elseif group.type != 'grouphub' and attribute(memberships, group.id) is defined and attribute(memberships, group.id).role in ['member', 'admin'] %}
-                <a class="button_join {{ color }}" href="#">
-                    <span>{{ 'MEMBER'|trans }}</span>
                 </a>
             {% elseif group.type == 'grouphub' and attribute(memberships, group.id) is defined and attribute(memberships, group.id).role == 'prospect' %}
                 <a class="button_join {{ color }}" href="#">
@@ -42,7 +36,8 @@
     </li>
 {% endfor %}
 
-{% set offset = offset + limit %}
-{% if offset < groups.totalCount %}
-    <a class="groups-next" href="{{ path('groups', {'type': type, 'query': query, 'sort': sort, 'offset': offset, 'limit': limit}) }}"></a>
+{% if groups.totalCount > offset + limit %}
+    <a class="groups-next"
+       href="{{ path('groups', {'type': type, 'query': query, 'sort': sort, 'offset': offset + limit, 'limit': limit}) }}">
+    </a>
 {% endif %}
