Added support for new notification types.

--- a/app/Resources/views/popups/notifications.html.twig
+++ b/app/Resources/views/popups/notifications.html.twig
@@ -28,7 +28,7 @@
                         {% if notification.type == 'prospect' %}
                             {{ notification.message }}
                         {% else %}
-                            @TODO
+                            {{ ('notification_' ~ notification.type)|trans }}
                         {% endif %}
                     </td>
                 </tr>
