--- a/provision/files/vhost.j2
+++ b/provision/files/vhost.j2
@@ -21,7 +21,7 @@
     </Directory>
 
     <Directory {{ docroot }}>
-        Options Indexes FollowSymLinks MultiViews
+        Options FollowSymLinks
         AllowOverride All
         Order allow,deny
         allow from all
